--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -159,7 +159,7 @@ set_target_properties(libfemp PROPERTIES
 
 target_include_directories(libfemp
 	PUBLIC 
-	$<BUILD_INTERFACE:${CMAKE_SOURCE_DIR}/include>
+	$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/../include>
 	$<INSTALL_INTERFACE:include>
 	)
 
